--- a/Pages/Ayuda.html
+++ b/Pages/Ayuda.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Ayuda</title>
 </head>
 
-<body>
-    <header class="header-container">
+<body class="container">
+    <header class="header-container container">
         <h3 class="logo">Tienda de Juegos</h3>
         <nav class="header">
         <a href="../index.html">Inicio</a>
@@ -43,6 +44,42 @@
 
         <h3 class="subtitulo">¿No encuentras tu duda?</h3>
         <a href="Nosotros.html" class="subtitulo">Contactanos!</a>
+
+
+        <div class="titulo-formulario">
+            <h2>Dejanos tu mensaje !</h2>
+            <p><em>Díganos como mejorar el sitio.</em></p>
+        </div>
+
+        
+        <form action="../php/form.php" method="post" class="formulario-container">
+            
+            <div class="form-linea">
+                <label for="nombre">Nombre</label>
+                <input type="text" id="nombre" placeholder="Richard Alerson" name="nombre" required>
+            </div>
+
+            <div class="form-linea">
+                <label for="email">Email</label>
+                <input type="text" name="email" id="email" placeholder="richardito@gmail.com" required>
+            </div>
+
+            <div class="form-linea">
+                <label for="abstract">Escribenos tu duda</label>
+                <textarea name="texto" id="abstract"></textarea>
+                <p class="instrucciones">
+                    Por favor, no supere las 500 palabras
+                </p>
+                <div class="form-boton">
+                    <button type="submit">Enviar !</button>
+                </div>
+
+            </div>
+
+
+
+
+        </form>
     </main>
 
 
