--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Tienda de Juegos</title>
 </head>
-<body class="body-container">
-    <header class="header-container">
+<body class="body-container container">
+    <header class="header-container container">
             <h3 class="logo">Tienda de Juegos</h3>
             <nav class="header">
             <a href="index.html">Inicio</a>
@@ -18,7 +19,7 @@
             </nav>
     </header>
 
-    <div><h1 class="titulo">Bienvenido a la mejor Tienda de VideoJuegosxd</h1></div>
+    <div><h1 class="titulo">Bienvenido a la mejor Tienda de VideoJuegos</h1></div>
 
     <main class="main-index">
         <div class="titulo-img">
