--- a/Pages/Juego.html
+++ b/Pages/Juego.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Juego</title>
 </head>
@@ -24,13 +25,55 @@
         <h1 class="titulo">Titulo del Juego</h1>
     </div>
     <main class="main-ayuda">
-
-
-        <div class="juego-logo-principal"><img src="../Assets/imgs/Steam.png" width="500" height="500"
-                alt="Imagen Juego"></div>
-
+        <section class="carrusel-juego">
+            <div class="carrusel-juego-tamanio">
+                <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>First slide label</h5>
+                                <p>Some representative placeholder content for the first slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../Assets/imgs/Steam.png" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Second slide label</h5>
+                                <p>Some representative placeholder content for the second slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../Assets/imgs/Steam.png" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Third slide label</h5>
+                                <p>Some representative placeholder content for the third slide.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </section>
         <h2 class="subtitulo">Descripción</h2>
-        
+
         <p class="parrafo">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae illo qui consectetur velit accusamus
             dolorem
@@ -50,20 +93,20 @@
         </p>
 
         <h2 class="subtitulo">Ficha Tecnica</h2>
-        <p class="parrafo"> 
+        <p class="parrafo">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea commodi possimus iusto consequatur minima
             inventore
             corrupti nobis dolore adipisci tempore fuga explicabo, necessitatibus perspiciatis dolor quisquam doloremque
             voluptatum cupiditate ullam?
-        </p>    
+        </p>
 
-            <h2 class="subtitulo subtitulo2" >Links de Descarga</h2>
-            <nav class="links">
-            <a href="https://google.com">link 1</a>
-            <a href="https://google.com">link 2</a>
-            <a href="https://google.com">link 3</a>
-            </nav>
-       
+        <h2 class="subtitulo subtitulo2">Links de Descarga</h2>
+        <nav class="links">
+            <a href="https://www.google.com" target="_blank"><button type="button" class="btn btn-secondary btn-lg fw-bold">Link 3</button></a> 
+            <a href="https://www.google.com" target="_blank"><button type="button" class="btn btn-secondary btn-lg fw-bold">Link 3</button></a> 
+            <a href="https://www.google.com" target="_blank"><button type="button" class="btn btn-secondary btn-lg fw-bold">Link 3</button></a> 
+        </nav>
+
     </main>
 
 
@@ -73,13 +116,15 @@
     <footer class="footer-container">
         <h3 class="logo-foot">La Mejor Tienda</h3>
         <nav class="footer">
-            <a href="https:www.facebook.com" target = "blank">Facebook</a>
+            <a href="https:www.facebook.com" target="blank">Facebook</a>
             <a href="https:www.twitter.com" target="blank">Twitter</a>
             <a href="https:www.instagram.com" target="blank">Instagram</a>
         </nav>
     </footer>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
