--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <section class="carrusel-juego">
-            <div class="carrusel-juego-tamanio">
+            <div class="carrusel-juego-tamanio-index">
                 <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
@@ -47,13 +47,13 @@
                         <div class="carousel-item active">
                             <div class="row">
                                 <div class="col">
-                                    <img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="...">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
                                 </div>
                                 <div class="col">
-                                    <img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="...">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
                                 </div>
                                 <div class="col">
-                                    <img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="...">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
                                 </div>
                             </div>
 
@@ -61,26 +61,26 @@
                         <div class="carousel-item">
                             <div class="row">
                                 <div class="col">
-                                    <img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="...">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
                                 </div>
                                 <div class="col">
-                                    <img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="...">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
                                 </div>
                                 <div class="col">
-                                    <img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="...">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row">
                                 <div class="col">
-                                    <img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="...">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
                                 </div>
                                 <div class="col">
-                                    <img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="...">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
                                 </div>
                                 <div class="col">
-                                    <img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="...">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
                                 </div>
                             </div>
                         </div>
@@ -106,20 +106,138 @@
             <h2 class="subtitulo">Destacados</h2>
         </div>
 
-        <div class="photo-grid">
-            <nav>
-                <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" alt="" class="juego-logo"></a>
-                <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" alt="" class="juego-logo"></a>
-                <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" alt="" class="juego-logo"></a>
-            </nav>
-        </div>
-        <div class="photo-grid">
-            <nav>
-                <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" alt="" class="juego-logo"></a>
-                <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" alt="" class="juego-logo"></a>
-                <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" alt="" class="juego-logo"></a>
-            </nav>
-        </div>
+        <section class="carrusel-juego">
+            <div class="carrusel-juego-tamanio-index">
+                <div id="carouselExampleCaptions1" class="carousel slide " data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row">
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions1"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions1"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section class="carrusel-juego">
+            <div class="carrusel-juego-tamanio-index">
+                <div id="carouselExampleCaptions2" class="carousel slide " data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row">
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                                <div class="col">
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions2"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions2"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </section>
 
 
 
