Listo para entregar pero aún faltan cosas

--- a/index.html
+++ b/index.html
@@ -47,13 +47,16 @@
                         <div class="carousel-item active">
                             <div class="row">
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                             </div>
 
@@ -61,26 +64,32 @@
                         <div class="carousel-item">
                             <div class="row">
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row">
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                             </div>
                         </div>
@@ -121,13 +130,16 @@
                         <div class="carousel-item active">
                             <div class="row">
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                             </div>
 
@@ -135,26 +147,32 @@
                         <div class="carousel-item">
                             <div class="row">
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row">
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                             </div>
                         </div>
@@ -187,13 +205,16 @@
                         <div class="carousel-item active">
                             <div class="row">
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                             </div>
 
@@ -201,26 +222,32 @@
                         <div class="carousel-item">
                             <div class="row">
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row">
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                                 <div class="col">
-                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png" class="d-block w-100 " alt="..."></a> 
+                                    <a href="Pages/Juego.html"><img src="../Assets/imgs/Steam.png"
+                                            class="d-block w-100 " alt="..."></a>
                                 </div>
                             </div>
                         </div>
@@ -248,9 +275,9 @@
     <footer class="footer-container">
         <h3 class="logo-foot">La Mejor Tienda</h3>
         <nav class="footer">
-            <a href="https:www.facebook.com" target="blank">Facebook</a>
-            <a href="https:www.twitter.com" target="blank">Twitter</a>
-            <a href="https:www.instagram.com" target="blank">Instagram</a>
+            <a href="https://www.facebook.com/jonathan.caucota/" target="blank">Facebook</a>
+            <a href="https://twitter.com/JonathanCaucota" target="blank">Twitter</a>
+            <a href="https://www.instagram.com/jonacaucota/" target="blank">Instagram</a>
         </nav>
     </footer>
 
